--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,6 @@
     <p>Welcome to the chat app</p>
 
 <script src="/socket.io/socket.io.js"></script>
-<script>
-  var socket = io();
-
-  socket.on('connect', () =>{
-    console.log('connnected to server');
-  });
-
-  socket.on('disconnect', () =>{
-    console.log('disconnected for server');
-  });
-
-</script>
-
-
+<script src="/js/index.js"></script>
   </body>
 </html>
